[gd_scene load_steps=30 format=2]

[ext_resource path="res://Fonts/Bumpo.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Calculations.gd" type="Script" id=3]
[ext_resource path="res://Scripts/NumberGenerator.gd" type="Script" id=4]
[ext_resource path="res://Scripts/ProgressBar.gd" type="Script" id=5]
[ext_resource path="res://Scripts/GetInput.gd" type="Script" id=6]
[ext_resource path="res://Scripts/GameOver.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=8]
[ext_resource path="res://Scenes/heart.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scripts/PlayAgain.gd" type="Script" id=10]
[ext_resource path="res://Styles/CheckButtonPressed.tres" type="StyleBox" id=11]
[ext_resource path="res://Styles/CheckButton.tres" type="StyleBox" id=12]
[ext_resource path="res://Animations/right_answer.tres" type="Animation" id=13]
[ext_resource path="res://Animations/wrong_answer.tres" type="Animation" id=14]
[ext_resource path="res://Scripts/Sounds.gd" type="Script" id=15]
[ext_resource path="res://Art/backspace.png" type="Texture" id=16]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.882353, 0.121569, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.113725, 0.360784, 0.541176, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="DynamicFont" id=3]
size = 90
outline_size = 2
outline_color = Color( 0.113725, 0.360784, 0.541176, 1 )
extra_spacing_top = 15
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.137255, 0.454902, 0.682353, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.054902, 0.2, 0.305882, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=5]
size = 50
extra_spacing_top = 10
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 34.0
bg_color = Color( 0.113725, 0.360784, 0.541176, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.054902, 0.2, 0.305882, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 34.0
bg_color = Color( 0.101961, 0.298039, 0.443137, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.054902, 0.2, 0.305882, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=9]
size = 40
use_filter = true
extra_spacing_top = 10
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=11]
size = 40
outline_size = 2
outline_color = Color( 0, 0.407843, 0.0666667, 1 )
use_filter = true
extra_spacing_top = 10
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
size = 27
outline_size = 2
outline_color = Color( 0.113725, 0.360784, 0.541176, 1 )
extra_spacing_top = 10
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
size = 27
outline_size = 2
outline_color = Color( 0.113725, 0.360784, 0.541176, 1 )
extra_spacing_top = 10
font_data = ExtResource( 1 )

[node name="Node" type="Node"]
script = ExtResource( 8 )

[node name="Calculations" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="NumberGenerator" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="GetInput" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="GameOver" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="PlayAgain" type="Node" parent="."]
script = ExtResource( 10 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.482353, 0.670588, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -150.056
margin_top = 142.0
margin_right = 149.944
margin_bottom = 162.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
step = 1.0
value = 50.0
percent_visible = false
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
initial_time = 12

[node name="Tween" type="Tween" parent="ProgressBar"]

[node name="Timer" type="Timer" parent="ProgressBar"]
wait_time = 0.5

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 176.0
margin_right = 200.0
margin_bottom = 326.0
custom_fonts/font = SubResource( 3 )
text = "3 . 2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -177.5
margin_right = 200.0
margin_bottom = -96.5
rect_pivot_offset = Vector2( 200, 40 )
custom_styles/read_only = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_uneditable = Color( 1, 0.996078, 0.996078, 1 )
align = 1
editable = false
context_menu_enabled = false
virtual_keyboard_enabled = false
selecting_enabled = false
placeholder_alpha = 0.232
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="LineEdit"]
anims/right_answer = ExtResource( 13 )
anims/wrong_answer = ExtResource( 14 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -576.0
margin_right = 200.0
margin_bottom = -96.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_right = 400.0
margin_bottom = 380.0
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button1" parent="VBoxContainer/GridContainer" instance=ExtResource( 2 )]
margin_right = 120.0
margin_bottom = 80.0

[node name="Button2" parent="VBoxContainer/GridContainer" instance=ExtResource( 2 )]
margin_left = 140.0
margin_right = 260.0
margin_bottom = 80.0
text = "2"

[node name="Button3" parent="VBoxContainer/GridContainer" instance=ExtResource( 2 )]
margin_left = 280.0
margin_right = 400.0
margin_bottom = 80.0
text = "3"

[node name="Button4" parent="VBoxContainer/GridContainer" instance=ExtResource( 2 )]
margin_top = 100.0
margin_right = 120.0
margin_bottom = 180.0
text = "4"

[node name="Button5" parent="VBoxContainer/GridContainer" instance=ExtResource( 2 )]
margin_left = 140.0
margin_top = 100.0
margin_right = 260.0
margin_bottom = 180.0
text = "5"

[node name="Button6" parent="VBoxContainer/GridContainer" instance=ExtResource( 2 )]
margin_left = 280.0
margin_top = 100.0
margin_right = 400.0
margin_bottom = 180.0
text = "6"

[node name="Button7" parent="VBoxContainer/GridContainer" instance=ExtResource( 2 )]
margin_top = 200.0
margin_right = 120.0
margin_bottom = 280.0
text = "7"

[node name="Button8" parent="VBoxContainer/GridContainer" instance=ExtResource( 2 )]
margin_left = 140.0
margin_top = 200.0
margin_right = 260.0
margin_bottom = 280.0
text = "8"

[node name="Button9" parent="VBoxContainer/GridContainer" instance=ExtResource( 2 )]
margin_left = 280.0
margin_top = 200.0
margin_right = 400.0
margin_bottom = 280.0
text = "9"

[node name="Button10" parent="VBoxContainer/GridContainer" instance=ExtResource( 2 )]
margin_top = 300.0
margin_right = 120.0
margin_bottom = 380.0
text = "C"

[node name="Button11" parent="VBoxContainer/GridContainer" instance=ExtResource( 2 )]
margin_left = 140.0
margin_top = 300.0
margin_right = 260.0
margin_bottom = 380.0
text = "0"

[node name="Button12" parent="VBoxContainer/GridContainer" instance=ExtResource( 2 )]
margin_left = 280.0
margin_top = 300.0
margin_right = 400.0
margin_bottom = 380.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 9 )
text = ""
icon = ExtResource( 16 )
expand_icon = true

[node name="CheckButton" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_top = 400.0
margin_right = 400.0
margin_bottom = 480.0
custom_styles/hover = ExtResource( 12 )
custom_styles/pressed = ExtResource( 11 )
custom_styles/focus = SubResource( 10 )
custom_styles/normal = ExtResource( 12 )
custom_fonts/font = SubResource( 11 )
text = "Check"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 20.0
margin_top = 28.0
margin_right = -20.0
margin_bottom = 116.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer2"]
margin_right = 536.0
margin_bottom = 38.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skor" type="Label" parent="VBoxContainer2/HBoxContainer2"]
margin_right = 130.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 12 )
text = "Score : 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IyiSkor" type="Label" parent="VBoxContainer2/HBoxContainer2"]
margin_left = 331.0
margin_right = 536.0
margin_bottom = 38.0
size_flags_horizontal = 10
custom_fonts/font = SubResource( 13 )
text = "Best Score : 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 42.0
margin_right = 536.0
margin_bottom = 88.0

[node name="heart" parent="VBoxContainer2/HBoxContainer" instance=ExtResource( 9 )]
margin_right = 46.0
margin_bottom = 46.0

[node name="Sounds" type="Node" parent="."]
script = ExtResource( 15 )

[connection signal="correct_answer" from="Calculations" to="Sounds" method="_on_Calculations_correct_answer"]
[connection signal="wrong_answer" from="Calculations" to="Sounds" method="_on_Calculations_wrong_answer"]
[connection signal="game_over" from="ProgressBar" to="Calculations" method="_on_ProgressBar_game_over"]
[connection signal="game_over" from="ProgressBar" to="GameOver" method="_on_ProgressBar_game_over"]
[connection signal="heart_lose" from="ProgressBar" to="Sounds" method="_on_ProgressBar_heart_lose"]
[connection signal="heart_lose" from="ProgressBar" to="Calculations" method="_on_ProgressBar_heart_lose"]
[connection signal="tween_completed" from="ProgressBar/Tween" to="ProgressBar" method="_on_Tween_tween_completed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button1" to="Sounds" method="_on_Button1_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button1" to="GetInput" method="_on_Button1_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button2" to="Sounds" method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button2" to="GetInput" method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button3" to="Sounds" method="_on_Button3_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button3" to="GetInput" method="_on_Button3_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button4" to="Sounds" method="_on_Button4_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button4" to="GetInput" method="_on_Button4_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button5" to="Sounds" method="_on_Button5_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button5" to="GetInput" method="_on_Button5_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button6" to="Sounds" method="_on_Button6_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button6" to="GetInput" method="_on_Button6_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button7" to="Sounds" method="_on_Button7_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button7" to="GetInput" method="_on_Button7_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button8" to="Sounds" method="_on_Button8_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button8" to="GetInput" method="_on_Button8_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button9" to="Sounds" method="_on_Button9_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button9" to="GetInput" method="_on_Button9_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button10" to="Sounds" method="_on_Button10_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button10" to="GetInput" method="_on_Button10_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button11" to="Sounds" method="_on_Button11_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button11" to="GetInput" method="_on_Button11_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button12" to="Sounds" method="_on_Button12_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button12" to="GetInput" method="_on_Button12_pressed"]
[connection signal="pressed" from="VBoxContainer/CheckButton" to="Sounds" method="_on_CheckButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CheckButton" to="Calculations" method="_on_CheckButton_pressed"]
